// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalHttpLogger should allow multiple headers 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "127.0.0.1:13000",
      "one": Object {
        "0": "two",
        "1": "three",
      },
      "user-agent": "axios/0.19.2",
    },
    "id": "[presents]",
    "method": "GET",
    "timeStart": 1,
    "url": "http://127.0.0.1:13000/get?a=b",
  },
  "response": Object {
    "body": "Hello World!",
    "headers": Object {
      "connection": "close",
      "content-length": "12",
      "content-type": "text/html; charset=utf-8",
      "vary": "Accept-Encoding",
      "x-powered-by": "Express",
    },
    "rawHeaders": Array [
      "X-Powered-By",
      "Express",
      "Content-Type",
      "text/html; charset=utf-8",
      "Content-Length",
      "12",
      "Vary",
      "Accept-Encoding",
      "Connection",
      "close",
    ],
    "status": 200,
    "timeStart": 1,
  },
}
`;

exports[`GlobalHttpLogger should capture GET requests 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.2",
    },
    "id": "[presents]",
    "method": "GET",
    "timeStart": 1,
    "url": "http://127.0.0.1:13000/get?a=b",
  },
  "response": Object {
    "body": "Hello World!",
    "headers": Object {
      "connection": "close",
      "content-length": "12",
      "content-type": "text/html; charset=utf-8",
      "vary": "Accept-Encoding",
      "x-powered-by": "Express",
    },
    "rawHeaders": Array [
      "X-Powered-By",
      "Express",
      "Content-Type",
      "text/html; charset=utf-8",
      "Content-Length",
      "12",
      "Vary",
      "Accept-Encoding",
      "Connection",
      "close",
    ],
    "status": 200,
    "timeStart": 1,
  },
}
`;

exports[`GlobalHttpLogger should capture GET requests with error response 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.2",
    },
    "id": "[presents]",
    "method": "GET",
    "timeStart": 1,
    "url": "http://127.0.0.1:13000/get/404",
  },
  "response": Object {
    "body": "{\\"error\\":\\"Not found\\"}",
    "headers": Object {
      "connection": "close",
      "content-length": "21",
      "content-type": "application/json; charset=utf-8",
      "vary": "Accept-Encoding",
      "x-powered-by": "Express",
    },
    "rawHeaders": Array [
      "X-Powered-By",
      "Express",
      "Content-Type",
      "application/json; charset=utf-8",
      "Content-Length",
      "21",
      "Vary",
      "Accept-Encoding",
      "Connection",
      "close",
    ],
    "status": 404,
    "timeStart": 1,
  },
}
`;

exports[`GlobalHttpLogger should capture GET requests with network error 1`] = `
Object {
  "body": null,
  "headers": Object {
    "accept": "application/json, text/plain, */*",
    "host": "never.existing.host.asdfgh",
    "user-agent": "axios/0.19.2",
  },
  "id": "[presents]",
  "method": "GET",
  "timeStart": 1,
  "url": "http://never.existing.host.asdfgh/",
}
`;

exports[`GlobalHttpLogger should capture POST requests 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "content-length": 13,
      "content-type": "application/json;charset=utf-8",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.2",
    },
    "id": "[presents]",
    "method": "POST",
    "timeStart": 1,
    "url": "http://127.0.0.1:13000/post",
  },
  "response": Object {
    "body": "{\\"hello\\":\\"world\\"}",
    "headers": Object {
      "connection": "close",
      "content-length": "17",
      "content-type": "application/json; charset=utf-8",
      "vary": "Accept-Encoding",
      "x-powered-by": "Express",
    },
    "rawHeaders": Array [
      "X-Powered-By",
      "Express",
      "Content-Type",
      "application/json; charset=utf-8",
      "Content-Length",
      "17",
      "Vary",
      "Accept-Encoding",
      "Connection",
      "close",
    ],
    "status": 200,
    "timeStart": 1,
  },
}
`;

exports[`GlobalHttpLogger should decode gzipped content 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "accept-encoding": "gzip",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.2",
    },
    "id": "[presents]",
    "method": "GET",
    "timeStart": 1,
    "url": "http://127.0.0.1:13000/compressable",
  },
  "response": Object {
    "body": "Hello World!",
    "headers": Object {
      "connection": "close",
      "content-type": "text/html; charset=utf-8",
      "transfer-encoding": "chunked",
      "vary": "Accept-Encoding",
      "x-powered-by": "Express",
    },
    "rawHeaders": Array [
      "X-Powered-By",
      "Express",
      "Content-Type",
      "text/html; charset=utf-8",
      "Vary",
      "Accept-Encoding",
      "Content-Encoding",
      "gzip",
      "Connection",
      "close",
      "Transfer-Encoding",
      "chunked",
    ],
    "status": 200,
    "timeStart": 1,
  },
}
`;
